--- a/project1.css
+++ b/project1.css
@@ -31,8 +31,8 @@
    border: 1px solid #8888bb;
    border-radius: 7pt;
    background: #ccccff;
-   -webkit-flex: 1 6 20%;
-           flex: 1 6 20%;
+   -webkit-flex: 1 6 10%;
+           flex: 1 6 10%;
    -webkit-order: 1;
            order: 1;
    }
@@ -43,11 +43,91 @@
    border: 1px solid #8888bb;
    border-radius: 7pt;
    background: #ccccff;
-   -webkit-flex: 1 6 20%;
-           flex: 1 6 20%;
+   -webkit-flex: 1 6 10%;
+           flex: 1 6 10%;
    -webkit-order: 3;
            order: 3;
    }
+
+   #main-container{
+     margin: 0px;
+     padding: 0px;
+     display: -webkit-flex;
+     display:         flex;
+     -webkit-flex-flow: row;
+           flex-flow: row 
+   }
+  #left {
+   margin: 4px;
+   padding: 5px;
+   border: 1px solid #8888bb;
+   border-radius: 7pt;
+   background: red;
+   -webkit-flex: 1 1 20%;
+           flex: 1 1 20%;
+   -webkit-order: 1;
+           order: 1;
+   }
+  #center {
+   margin: 4px;
+   padding: 5px;
+   border: 1px solid #8888bb;
+   border-radius: 7pt;
+   background: blue;
+   -webkit-flex: 1 1 60%;
+           flex: 1 1 60%;
+   -webkit-order: 2;
+           order: 2;
+   }
+
+  #right {
+   margin: 4px;
+   padding: 5px;
+   border: 1px solid #8888bb;
+   border-radius: 7pt;
+   background: yellow;
+   -webkit-flex: 1 1 20%;
+           flex: 1 1 20%;
+   -webkit-order: 3;
+           order: 3;
+   }
+
+   /* flex container for side nav bar */
+   #side-nav-container{
+     margin: 0px;
+     padding: 0px;
+     display: -webkit-flex;
+     display:         flex;
+     -webkit-flex-flow: column;
+           flex-flow: column;
+   }
+
+   #side-nav1 {
+     margin: 4px;
+     padding: 5px;
+     border: 1px solid red;
+     border-radius: 7pt;
+     background: yellow;
+     -webkit-flex: 1 1 50%;
+             flex: 1 1 50%;
+     -webkit-order: 1;
+             order: 1;
+   }
+
+   #side-nav2 {
+     margin: 4px;
+     padding: 5px;
+     border: 1px solid red;
+     border-radius: 7pt;
+     background: pink;
+     -webkit-flex: 1 1 50%;
+             flex: 1 1 50%;
+     -webkit-order: 2;
+             order: 2;
+   }
+
+
+
  
   header, footer {
    display: block;
